[project]
name = "deep-learning-remote-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "git-filter-repo>=2.47.0",
    "tensorflow-gpu>=2.11.0",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
]
