[project]
name = "deep-learning-remote-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "git-filter-repo>=2.47.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorflow-gpu>=2.11.0",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchsummary>=1.5.1",
    "torchvision>=0.20.1",
    "wandb>=0.19.4",
]
